sketch out discussion a little

--- a/writing/_cogsci2016/habituals-cogsci2016.bib
+++ b/writing/_cogsci2016/habituals-cogsci2016.bib
@@ -66,16 +66,6 @@
   note = {Accessed: 2015-12-30}
 }
 
-@inbook{Gelman2004, 
-  author = {Gelman, Susan A.}, 
-  booktitle = {Weaving a lexicon}, 
-  publisher = {MIT Press}, 
-  title = {Learning words for kinds: Generic noun phrases in acquisition}, 
-  year = {2004},
-  city= {Cambridge, MA},
-  pages = {445-484}
-}
-
 @article{Gelman1999,
   author = {Gelman, Susan A. and Heyman, Gail D.},
   issn = {0956-7976},
@@ -89,6 +79,28 @@
   year = {1999}
 }
 
+@inbook{Gelman2004, 
+  author = {Gelman, Susan A.}, 
+  booktitle = {Weaving a lexicon}, 
+  publisher = {MIT Press}, 
+  title = {Learning words for kinds: Generic noun phrases in acquisition}, 
+  year = {2004},
+  city= {Cambridge, MA},
+  pages = {445-484}
+}
+
+@article{Gelman2008,
+author = {Gelman, Susan A and Goetz, Peggy J and Sarnecka, Barbara W and Flukes, Jonathan},
+doi = {10.1080/15475440701542625.Generic},
+file = {:Users/mht/Documents/Mendeley Desktop/Gelman et al/2008/Gelman et al. - 2008 - Generic Language in Parent-Child Conversations.pdf:pdf},
+journal = {Language Learning and Development},
+mendeley-groups = {language/pragmatics,language/generics},
+number = {1},
+pages = {1--31},
+title = {{Generic Language in Parent-Child Conversations}},
+volume = {4},
+year = {2008}
+}
 
 @inbook{Goodman2015a, 
   author = {Goodman, Noah D. and Lassiter, Daniel}, 
