--- a/analysis/habitual-truthjudge.Rmd
+++ b/analysis/habitual-truthjudge.Rmd
@@ -6,21 +6,212 @@ output: html_document
 ---
 
 ```{r}
+library(data.table)
+library(coda)
+estimate_mode <- function(s) {
+  d <- density(s)
+  return(d$x[which.max(d$y)])
+}
+HPDhi<- function(s){
+  m <- HPDinterval(mcmc(s))
+  return(m["var1","upper"])
+}
+HPDlo<- function(s){
+  m <- HPDinterval(mcmc(s))
+  return(m["var1","lower"])
+}
+options("scipen"=10)   
+```
+
+
+
+
+
+
+```{r tj1.load}
 filePath <- "~/Documents/research/habituals/mturk/truthjudge-1/"
 d<- read.csv(paste(filePath, "truthjudge-1-trials.csv", sep=""))
 catch<- read.csv(paste(filePath, "truthjudge-1-catch_trials.csv", sep=""))
 
+scaleTime <- list(
+  day = 365,
+  ## day is ambiguous between work-day and day of the week
+  week = 52,
+  month = 12,
+  year = 1,
+  "5 years" = 1/5,
+  "10 years" = 1/10
+)
 
+d2<-d %>%
+  #ungroup() %>%
+  separate(n_instances, into=c("n","instance"), sep=" ") %>%
+  mutate(time_period = as.character(time_period),
+         n = to.n(n)) %>%
+  rowwise() %>%
+  mutate(frequency = n*scaleTime[[time_period]]) %>%
+  ungroup() %>%
+  mutate(logFreq = log(frequency))
+
+# write.csv(d2,"~/Documents/research/habituals/models/truthjudgement/tj-1.csv", 
+#           row.names=F)
+```
+
+
+```{r tj1.plot1}
 d.tidy <- d %>%
   mutate(boolResponse = (response=="agree-key")) %>%
   group_by(habitual, freqLevel, n_instances, time_period) %>%
   multi_boot_standard(column="boolResponse") %>%
   ungroup() %>%
   mutate(freqLevel = factor(freqLevel, levels=c("25", "50", "75"),
-                            labels=c("low", "medium", "high")))
+                            labels=c("low", "medium", "high"))) %>% 
+  mutate(sentence = paste(habitual, 
+                          paste(n_instances, time_period,sep="/"), sep='--')) %>%
+  mutate(sentence = reorder(sentence, mean, function(x){return(x)}),
+         freqLevel = factor(freqLevel, levels=c("high", "medium", "low")))
 
 ggplot(d.tidy, aes(x=habitual, fill = freqLevel, y = mean, group=freqLevel))+
   geom_bar(stat='identity', position=position_dodge())+
   geom_errorbar(aes(ymin=ci_lower, ymax=ci_upper), position=position_dodge())+
-  coord_flip()
+  theme(axis.text.x=element_text(angle=45,vjust=1,hjust=1))+
+  #scale_fill_solarized()+
+  xlab("")+
+  ylab("Proportion agreement")
+  #coord_flip()
+
+#ggsave("~/Documents/research/habituals/talks/lab-mtg-120115/images/tj1-bars-grouped.pdf")
+```
+
+```{r tj1.plot2}
+ggplot(d.tidy, aes(x=sentence, fill = freqLevel, y = mean-0.5, group=freqLevel))+
+  geom_bar(stat='identity', position=position_dodge())+
+  geom_errorbar(aes(ymin=ci_lower-0.5, ymax=ci_upper-0.5), position=position_dodge())+
+    scale_y_continuous(breaks=c(-0.5,0,0.5),labels=c("0","0.5","1"))+
+  scale_fill_solarized()+
+  coord_flip()+
+  xlab("Sentence and evidence")+
+  ylab("Proportion agreement")
+
+
+#ggsave("~/Documents/research/habituals/talks/lab-mtg-120115/images/tj1-bars.pdf")
+```
+
+
+
+# Modeling
+```{r tj1.model.load}
+filePath <- "~/Documents/research/habituals/models/truthjudgement/results/"
+prefix <- "truthJudge-RSA-so-phi-IncrMH"
+samples <- 1000
+burn <- samples / 2
+priorsamples <- 50000
+priorburn <- priorsamples / 2
+m<-read.csv(paste(filePath, prefix, 
+                   samples/1000, "k_burn", 
+                   burn/1000, "k_prior",
+                   priorsamples/1000, "k_burn",
+                   priorburn/1000,
+                   "k+discBins20a.csv",sep=""))
+
+m.samples <- m[rep(row.names(m), m$Probability*(samples-burn)), 1:5]
+```
+
+
+```{r tj1.model.params}
+m.params <- m.samples %>% filter(Type =='parameter')
+qplot(data=m.params, x= Value, geom='histogram')+
+  facet_wrap(~Level)
+```
+
+
+
+```{r tj1.model.pred}
+m.pred <- m.samples %>% filter(Type == 'predictive')
+
+m.predStats <- m.pred %>%
+  group_by(Item, Level, Grosslevel) %>%
+  summarise(MAP = estimate_mode(Value),
+            credHigh = HPDhi(Value),
+            credLow = HPDlo(Value)) %>%
+  mutate(Grosslevel = factor(Grosslevel, levels=c("25", "50", "75"),
+                            labels=c("low", "medium", "high"))) %>%
+  rename(habitual = Item,
+         freqLevel = Grosslevel)
+
+m.d<- left_join(d.tidy, m.predStats)
+m.d<- mutate(m.d, freqLevel = factor(freqLevel, levels =c("high", "medium", "low")) )
+
+ggplot(m.d,aes(x=MAP, y = mean, color=freqLevel))+
+  geom_point(size=4)+
+  geom_abline(intercept = 0, slope = 1, lty = 2)+
+  geom_errorbar(aes(ymin = ci_lower, ymax = ci_upper))+
+  geom_errorbarh(aes(xmin=credLow, xmax = credHigh))+
+  xlim(-0.05,1.05)+
+  ylim(-0.05,1.05)+
+  coord_fixed()
+
+
+#ggsave("~/Documents/research/habituals/talks/lab-mtg-120115/images/tj1-md-scatter-3colors.pdf")
+
+
+m.d <- m.d %>%
+  mutate(sqerr = (MAP-mean)^2)
+
+with(m.d, cor(MAP, mean, use="pairwise.complete.obs"))^2
+
+with(m.d %>% filter(habitual!="vacations in Switzerland"), 
+     cor(MAP, mean, use="pairwise.complete.obs"))^2
+```
+
+Human data: Bar plots with frequency
+
+```{r tj1.data.wFreq}
+
+ggplot(m.d, aes(x=to.n(Level), fill = habitual, 
+                y = mean-0.5))+
+  geom_bar(stat='identity',color='black', position=position_dodge())+
+  geom_errorbar(aes(ymin=ci_lower-0.5, ymax=ci_upper-0.5), position=position_dodge())+
+  scale_y_continuous(breaks=c(-0.5,0,0.5),labels=c("0","0.5","1"))+
+ # coord_flip()+
+  xlab("Sentence and evidence")+
+  ylab("Proportion agreement")
+#ggsave("~/Documents/research/habituals/talks/lab-mtg-120115/images/tj1-bars.pdf")
+```
+
+
+
+
+# TJ 2
+
+```{r tj2.load}
+filePath <- "~/Documents/research/habituals/mturk/truthjudge-2/"
+d<- read.csv(paste(filePath, "truthjudge-2-trials.csv", sep=""))
+catch<- read.csv(paste(filePath, "truthjudge-2-catch_trials.csv", sep=""))
+
+scaleTime <- list(
+  day = 365,
+  ## day is ambiguous between work-day and day of the week
+  week = 52,
+  month = 12,
+  year = 1,
+  "5 years" = 1/5,
+  "10 years" = 1/10
+)
+
+d2<-d %>%
+  #ungroup() %>%
+  separate(n_instances, into=c("n","instance"), sep=" ") %>%
+  mutate(time_period = as.character(time_period),
+         n = to.n(n)) %>%
+  rowwise() %>%
+  mutate(frequency = n*scaleTime[[time_period]]) %>%
+  ungroup() %>%
+  mutate(logFreq = log(frequency))
+
+# write.csv(d2,"~/Documents/research/habituals/models/truthjudgement/tj-1.csv", 
+#           row.names=F)
+```
+
+
 ```
